Portafolio primera version

--- a/style/base/_variables.scss
+++ b/style/base/_variables.scss
@@ -1,15 +1,15 @@
 // COLORS
-$primary-color: #36d1dc;
-$secondary-color: #5b86e5;
+$primary-color:#ffffff;
+$secondary-color: #80c4f9;
 $font-family: "Montserrat", sans-serif;
 
-$light-white: #e5e5e5;
-$white-color: #ffffff;
-$dark-grey: #333333;
+$white-color: #1a1a1a;
+$light-white: #000000;
+$dark-grey: #80c4f9;
 
-$dark-blue-text: #272341; // For headings
+$dark-blue-text: #1466c3; // For headings
 
 // FONT SIZE
-$default-font-size: 1.6rem;
+$default-font-size: 1.65rem;
 $mid-font-size: 2.5rem;
 $big-font-size: 4rem;
