--- a/style/base/_variables.scss
+++ b/style/base/_variables.scss
@@ -7,7 +7,7 @@ $white-color: #1a1a1a;
 $light-white: #000000;
 $dark-grey: #80c4f9;
 
-$dark-blue-text: #1466c3; // For headings
+$dark-blue-text: #fff; // For headings
 
 // FONT SIZE
 $default-font-size: 1.65rem;
