--- a/style/sections/_projects.scss
+++ b/style/sections/_projects.scss
@@ -3,6 +3,10 @@
   color: $dark-blue-text;
   margin-top: -15rem;
   padding-top: 15rem;
+.project-wrapper__text-title {
+  color: #054894cb
+}
+
   @include respond(tab-land) {
     margin-top: 0;
     padding-top: 5rem;
